[gd_scene load_steps=13 format=2]

[ext_resource path="res://Cenas/cena_Minigame/forca.tscn" type="PackedScene" id=1]
[ext_resource path="res://Audio/TremLoadingloopl.mp3" type="AudioStream" id=2]
[ext_resource path="res://Imagens/Quiz/desktop.png" type="Texture" id=3]
[ext_resource path="res://Audio/step.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/error.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/success.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/8-bit-game-over-sound-tune.ogg" type="AudioStream" id=7]
[ext_resource path="res://Cenas/cena_Minigame/minigameForca.gd" type="Script" id=8]
[ext_resource path="res://Font/MEGAMAN10.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="minigameForca" type="Node2D"]
script = ExtResource( 8 )

[node name="Desktop" type="Sprite" parent="."]
position = Vector2( 644, 361.5 )
scale = Vector2( 1.88571, 1.9313 )
texture = ExtResource( 3 )

[node name="forca" parent="." instance=ExtResource( 1 )]

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="blip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="gameover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="fimDeJogoLbl" type="Node2D" parent="."]
visible = false

[node name="label" type="Label" parent="fimDeJogoLbl"]
visible = false
margin_top = 170.0
margin_right = 1271.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 1 )
text = "Fim de Jogo"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="fimDeJogoLbl"]
autoplay = "blink"
anims/RESET = SubResource( 2 )
anims/blink = SubResource( 3 )

[node name="label" type="Label" parent="."]
margin_top = 140.0
margin_right = 1271.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "Jogo da Forca"
align = 1
valign = 1

[connection signal="acertouLetra" from="forca" to="." method="_on_forca_acertouLetra"]
[connection signal="acertouPalavra" from="forca" to="." method="_on_forca_acertouPalavra"]
[connection signal="acertouTodas" from="forca" to="." method="_on_forca_acertouTodas"]
[connection signal="enforcado" from="forca" to="." method="_on_forca_enforcado"]
[connection signal="errouLetra" from="forca" to="." method="_on_forca_errouLetra"]
[connection signal="letraJaEscolhida" from="forca" to="." method="_on_forca_letraJaEscolhida"]
